# FailSafe-AI-Powered-Fact-Checking-System

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DOC_TOI.md  Dockerfile  README.md  config.yaml  demo.html  docker-compose.yaml  docker-compose.yml  download_nltk.py  requirements.txt  tasks.py  webapp.py
.github/workflows/: ci.yml  python-lint.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  test_anti_hallucination.py  test_fallacy_detection.py  test_multilingual.py  test_rdf_sag.py
backend/app/: main.py  main_simple.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analyze.py  backup.py  collaboration.py  docs.py  feedback.py  health.py  monitor.py  monitoring.py  provenance.py  pubmed.py  testing.py
backend/app/core/: backup.py  config.py  ethical_config.yaml  graph.py  local_config.py  middleware.py  security.py
backend/app/db/: models.py  session.py
backend/app/db/models/: feedback.py
backend/app/models/: claim.py  feedback.py  report.py  report_schema.json
backend/app/services/: adversarial_testing.py  ai_detection_service.py  cache_service.py  collaboration_service.py  embedding_service.py  fallacy_detector.py  graph_service.py  ingestion_service.py  llm_client.py  monitoring_service.py  multilingual_service.py  multimodal_service.py  orchestrator.py  performance_service.py  provenance_service.py  pubmed_service.py  retrieval_service.py  sag_generator.py  synthesis_service.py  synthetic_data_generator.py  validation_service.py  verification_service.py
backend/tests/: test_ai_detection_service.py  test_cache_service.py  test_fallacy_detector.py  test_fallacy_detector_simple.py  test_ingestion_service.py  test_performance_service.py  test_verification_and_synthesis.py
data/: mbfc_huggingface_data.json  sources.db
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  USER_MANUAL.md
factcheck/: __init__.py  __main__.py
factcheck/config/: api_config.yaml  domain_trust.yaml  sample_prompt.yaml
factcheck/core/: CheckWorthy.py  ClaimVerify.py  Coreference.py  Decompose.py  KnowledgeBase.py  QueryGenerator.py  Screening.py  __init__.py
factcheck/core/Retriever/: __init__.py  base.py  google_retriever.py  hybrid_retriever.py  serper_retriever.py
factcheck/ontology/: sag_ontology.jsonld
factcheck/utils/: api_config.py  config_loader.py  data_class.py  database.py  deep_scraper.py  graph_utils.py  logger.py  multimodal.py  utils.py  web_util.py
factcheck/utils/llmclient/: __init__.py  base.py  claude_client.py  gemini_client.py  gpt_client.py  local_openai_client.py
factcheck/utils/prompt/: __init__.py  base.py  claude_prompt.py  customized_prompt.py  gemini_prompt.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
frontend/src/: App.tsx  AppEnhanced.css  AppEnhanced.tsx
frontend/src/components/: EvidenceList.css  EvidenceList.tsx  FallacyAlert.css  FallacyAlert.tsx  VerdictCard.css  VerdictCard.tsx
frontend/src/components/FallacyExplanation/: FallacyExplanation.css  FallacyExplanation.tsx
frontend/src/components/ReportDisplay/: ReportDisplay.css  ReportDisplay.tsx
frontend/src/types/: Report.ts
models/stylometry/: entropy_stats.json  idf_vector.pkl
script/: build_stylometry_corpus.py  build_vectordb.py  import_mbfc_data.py  manage_db.py
scripts/: build_knowledge_base.py  build_stylometry_corpus.py  build_vectordb.py  crawler_update_kb.py  dev.ps1  dev.sh  import_mbfc_data.py  manage_db.py  production_setup.sh  seed_rdf_neo4j.py  setup_env.py
templates/: FailSafe_fc.html  final_result.html  input.html  loading.html
(+1 files in other folders)
